# neko_game_engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  embed.lua  gen_api.sh  premake5.lua  xmake.lua
gamedir/: README.md  conf.lua  main.lua
gamedir/assets/: B_witch.ase  arrow.ase  atlas.ase  bow.ase  cat.ase  coin.ase  cursor.ase  enemy.ase  hpbar.ase  robot.ase  workingman.ase
gamedir/assets/maps/: map.tmj  map.tmx  map1.tsx  tx_grass.tsx
source/api/: bootstrap.lua  common.lua  defs_imgui.lua  defs_neko.lua  defs_neko_core.lua  gen_imgui.lua  neko_embed.cpp  tolua.lua
source/api/lib/: apidef.lua  defs_to_docstrings.lua  defs_to_teal.lua  defs_to_typescript.lua  gen_api_luaboot.lua  gen_api_native.lua  imgui_doc.lua  imgui_funcs.lua  imgui_meta.lua  imgui_types.lua  json.lua
source/base/: cbase.cpp  cbase.hpp
source/base/common/: arena.hpp  array.hpp  base.hpp  color.hpp  json.cpp  json.hpp  logger.cpp  logger.hpp  map.hpp  math.hpp  mem.hpp  mutex.hpp  os.cpp  os.hpp  profiler.cpp  profiler.hpp  queue.hpp  reflection.hpp  singleton.hpp  string.cpp  string.hpp  util.hpp  vfs.cpp  vfs.hpp  xml.cpp
source/base/scripting/: lua_function.hpp  lua_wrapper.hpp  luax.cpp  luax.h  nativescript.cpp  reflection.hpp  scripting.cpp  scripting.h
source/editor/: editor.cpp  editor.hpp  lite.cpp  lite.h
source/engine/: api.cpp  api.hpp  api_core.cpp  api_core.h  asset.cpp  asset.h  base.cpp  base.h  base.hpp  batch.cpp  batch.h  bindata.cpp  bindata.h  bootstrap.cpp  bootstrap.h  bootstrap.lua  camera.cpp  camera.h  common.cpp  common.h  common.lua  component.cpp  component.h  console.cpp  console.h  csb.lua  data.cpp  data.h  deps.cpp  draw.cpp  draw.h  ecs.cpp  ecs.h  ecs_lua.cpp  edit.cpp  edit.h  editor.cpp  editor.h  embed.cpp  entity.cpp  (+223 more)
source/engine/audio/: neko_audio.cpp  neko_audio.h
source/engine/base/: arena.hpp  array.hpp  base.hpp  cbase.cpp  cbase.hpp  color.hpp  hashmap.hpp  json.cpp  json.hpp  math.hpp  mem.hpp  mutex.hpp  neko_component.h  neko_cvar.cpp  neko_cvar.hpp  neko_ecs.cpp  neko_ecs.h  neko_engine.cpp  neko_engine.h  neko_meta.hpp  neko_meta_class.h  neko_object.h  os.cpp  os.hpp  profiler.cpp  profiler.hpp  queue.hpp  reflection.hpp  singleton.hpp  string.cpp  string.hpp  util.hpp  vfs.cpp  vfs.hpp  xml.cpp  xml.hpp
source/engine/builtin/: neko_aseprite.h  neko_fs.c  neko_fs.h  neko_gui_impl.h  neko_gui_internal.h  neko_hashtable.c  neko_hashtable.h  neko_png.h
source/engine/common/: neko_containers.h  neko_hash.h  neko_mem.cpp  neko_mem.h  neko_str.h  neko_types.h  neko_util.h
source/engine/components/: camera.cpp  camera.h  cloud.cpp  cloud.h  database.cpp  edit.cpp  edit.h  gui.cpp  neko_aseprite.c  neko_text.c  neko_tiled.c  rectangle.cpp  rectangle.h  sprite.cpp  sprite.h  tiledmap.cpp  tiledmap.hpp  transform.cpp  transform.h
source/engine/ecs/: entity.cpp  entity.h  entitybase.cpp  entitybase.hpp  lua_ecs.cpp  lua_ecs.hpp
source/engine/editor/: neko_dbgui.hpp  neko_editor.cpp  neko_editor.hpp  neko_profiler.cpp  neko_profiler.hpp
source/engine/embed/: boot.lua  bootstrap.lua  common.lua  cstruct.lua  ecs.lua  neko_embed.cpp  prefabs.lua  startup.lua  tolua.lua
source/engine/filesystem/: neko_packer.cpp  neko_packer.h
source/engine/graphics/: neko_camera.cpp  neko_camera.h  neko_fontcache.cpp  neko_fontcache.h  neko_graphics.cpp  neko_graphics.h  neko_material.cpp  neko_material.h  neko_mesh.h  neko_particle.cpp  neko_particle.h  neko_quad_batch.cpp  neko_quad_batch.h  neko_render_pass.cpp  neko_render_pass.h  neko_sprite.cpp  neko_sprite.h
source/engine/gui/: neko_builtin_font.h  neko_imgui_lua.hpp  neko_imgui_utils.cpp  neko_imgui_utils.hpp  neko_text_renderer.cpp  neko_text_renderer.hpp
source/engine/impl/: neko_audio_impl.c  neko_audio_impl.cpp  neko_graphics_impl.c  neko_graphics_impl.cpp  neko_platform_impl.c  neko_platform_impl.cpp  neko_platform_win_impl.cpp
source/engine/lexer/: neko_lexer.h  neko_xml.cpp  neko_xml.h
source/engine/luabind/: core.hpp  debug.hpp  ffi.hpp  filewatch.hpp  imgui.hpp  lowlua.hpp  pack.hpp  prefab.hpp  struct.hpp
source/engine/math/: neko_math.h
source/engine/meta/: neko_refl.cpp  neko_refl.hpp  neko_refl_lua.cpp  neko_refl_lua.h
source/engine/modules/: ecslua.cpp  ecslua.h  neko_box2d.cpp  neko_enet.cpp  neko_flecslua.c  neko_flecslua.h  neko_ma.cpp  neko_physics.cpp  neko_physics.h  neko_sound.cpp  neko_sound.h
source/engine/physics/: neko_phy.cpp  neko_phy.h
source/engine/platform/: neko_platform.cpp  neko_platform.h
source/engine/renderer/: renderer.cpp  renderer.h  shader.cpp  shader.h  shader_parser.cpp  shader_parser.h  texture.cpp  texture.h
source/engine/scripting/: api.cpp  bind_asset.cpp  bind_gl.cpp  lua_cdata.cpp  lua_database.cpp  lua_database.h  lua_function.hpp  lua_math.cpp  lua_util.cpp  lua_util.h  lua_wrapper.hpp  lua_wrapper_ext.cpp  lua_wrapper_ext.hpp  luax.cpp  luax.h  nativescript.cpp  nativescript.hpp  neko_binding_engine.h  neko_lua_base.cpp  neko_lua_base.h  neko_lua_register.h  neko_lua_wrapper.hpp  neko_scripting.cpp  neko_scripting.h  reflection.hpp  scripting.cpp  scripting.h  wrap_draw.cpp  wrap_draw.h  wrap_ecs.cpp  wrap_meta.h
source/engine/serialize/: neko_byte_buffer.cpp  neko_byte_buffer.h  neko_meta.cpp  neko_meta.h  neko_nbt.cpp  neko_nbt.h  neko_serialize.hpp
source/game/: game.cpp  sandbox.cpp
source/sandbox/: game_chunk.h  game_cvar.cpp  game_cvar.h  game_editor.cpp  game_editor.h  game_fsm.hpp  game_imgui.h  game_main.cpp  game_main.h  game_physics.cpp  game_physics.h  game_physics_math.cpp  game_physics_math.hpp  game_pixelui.cpp  game_pixelui.h  game_scripting.h  game_scripts.cpp  game_scripts.h  helper.cpp  helper.h  imgui_iterator.inl  imgui_lua.cpp  imgui_lua.h  imgui_lua_bindings.cpp  imgui_lua_inspector.cpp  imgui_lua_inspector.hpp  interpreter.h  magic_pixel.cpp  magic_pixel.h  main.cpp  mat_base.cpp  mat_base.h  neko_api.cpp  neko_api.h  neko_args.h  neko_binding_engine.h  neko_client_ecs.h  neko_console.h  neko_csharp_native.cpp  neko_gui_auto.hpp  (+22 more)
source/test/: test_luawrap.cpp  test_shader.cpp
(+219 files in other folders)
